# brandkaart

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
assets/: README.md
pipeline/: __init__.py  artifact.py  checks.py  common.py  galicia_geometry.py  geometry.py  meteoalarm_geometry.py  places.py  raster.py  restore.py  run.py  schema.py
pipeline/adapters/: aemet_danger.py  aemet_warnings.py  canarias_alerts.py  cems_rapid_mapping.py  effis_danger.py  firms.py  france_massifs.py  galicia_irdi.py  meteo_forets.py  meteoalarm_warnings.py  pla_alfa.py
prototype/: README.md  app.js  index.html  styles.css
tests/: frontend_helpers.test.js  test_adapters.py  test_artifact.py  test_canarias_alerts.py  test_checks.py  test_effis_danger.py  test_france_massifs.py  test_frontend.py  test_galicia_irdi.py  test_geometry.py  test_meteoalarm_gate.py  test_meteoalarm_geometry.py  test_meteoalarm_warnings.py  test_pipeline_offline.py  test_pla_alfa.py  test_places.py  test_raster.py  test_run.py  test_schema.py
web/: app-helpers.js  app.js  index.html  styles.css
